--- a/Veterinary.CleanArchitecture.MVC/Views/Shared/_Layout.cshtml
+++ b/Veterinary.CleanArchitecture.MVC/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/Veterinary.CleanArchitecture.MVC.styles.css" asp-append-version="true"/>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
 <header>
@@ -25,6 +26,14 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Owners" asp-action="ListOwners">List of owners</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Owners" asp-action="CreateOwner">Create owner</a>
+                    </li>
+                    
                 </ul>
             </div>
         </div>
@@ -41,7 +50,6 @@
         &copy; 2024 - Veterinary.CleanArchitecture.MVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
 </footer>
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", required: false)
